Fixes the dropdown that was too wide in latlong component in narrow columns

--- a/client/components/LatLong/LatLong.css
+++ b/client/components/LatLong/LatLong.css
@@ -4,10 +4,18 @@
 
 .collapsedStyle {
   max-height: 0;
-  -webkit-transition: max-height 0.3s; 
-  -moz-transition: max-height 0.3s; 
-  -ms-transition: max-height 0.3s; 
-  -o-transition: max-height 0.3s; 
+  -webkit-transition: max-height 0.3s;
+  -moz-transition: max-height 0.3s;
+  -ms-transition: max-height 0.3s;
+  -o-transition: max-height 0.3s;
   transition: max-height 1s;
   overflow: hidden;
+}
+
+.thisSelect {
+  width: 100%;
+}
+
+select {
+  width: 100%;
 }
